test/files/pos/raw-map/J_1.java
public class J_1 {
    public void setRawType(java.util.Map x) {
    }
}
