test/files/neg/t9912b/Comparer.java


public class Comparer {
  public int compareTo(java.util.List o) {
    return 0;
  }
}
